--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section>
     <div class="container section-2">
       <h2>NOTE: This is this is not for everyone, it is only for those who want to take charge of their life and are
-        common to putting in the required work. If you are in this category, use the link below to get registered. We
+        committed to putting in the required work. If you are in this category, use the link below to get registered. We
         await your entry into the millionaires club.</h2>
       <button data-aos="fade-right" class="btn-reg"><a href="https://wa.link/20rmnv">Register Here to Get Started.</a></button>
       <h2 class="h2-contact">If you have any questions, feel free to contact me </h2>
