--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       <h2>NOTE: This is this is not for everyone, it is only for those who want to take charge of their life and are
         committed to putting in the required work. If you are in this category, use the link below to get registered. We
         await your entry into the millionaires club.</h2>
-      <button data-aos="fade-right" class="btn-reg"><a href="https://wa.link/20rmnv">Register Here to Get Started.</a></button>
+      <button data-aos="fade-right" class="btn-reg"><a href="https://wa.link/20rmnv" target="_blank">Register Here to Get Started.</a></button>
       <h2 class="h2-contact">If you have any questions, feel free to contact me </h2>
       <div class="btn">
-        <button data-aos="fade-left" class="btn-whatsapp"><i class="fa-brands fa-whatsapp"></i><a href='https://api.whatsapp.com/send?phone'
+        <button data-aos="fade-left" class="btn-whatsapp"><i class="fa-brands fa-whatsapp"></i><a href='https://wa.link/20rmnv'
             target='_blank'>WhatsApp</a> </button>
         <button data-aos="fade-right" class="btn-email"><i class="fa-regular fa-envelope"></i><a href="mailto:nkemjikabrian@gmail.com "
             target='_blank'>Email</a></button>
@@ -86,7 +86,7 @@
       <h3 class="h3-cont">How he has been dominating the Nigerian internet marketing space, generating 100 million naira
         for himself and consistently generating 500k, a million naira and more monthly for his students using AMAP.
       </h3>
-      <p><a href="https://wa.link/rgaqxj">I AM INTERESTED, HOW DO I GET STARTED?</a></p>
+      <p><a href="https://wa.link/rgaqxj" target="_blank">I AM INTERESTED, HOW DO I GET STARTED?</a></p>
     </div>
   </section>
   <section>
@@ -128,7 +128,7 @@
         </ul>
       </div>
     </div>
-    <h3 class="h3-nkemjika"><a href="https://wa.link/rgaqxj">NKEMJIKA I AM INTERESTED, HOW DO I GET STARTED?</a></h3>
+    <h3 class="h3-nkemjika"><a href="https://wa.link/rgaqxj" target="_blank">NKEMJIKA I AM INTERESTED, HOW DO I GET STARTED?</a></h3>
   </section>
 
   <footer>
@@ -136,7 +136,7 @@
       &copy; 2022 Nkemjika Brian Uzoma
     </div>
   </footer>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js" ></script>
   <script>
     AOS.init();
   </script>
