adjusted small width

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </section>
 
   <section>
-    <div class="container section-2">
+    <div class=" section-2">
       <h2>NOTE: This is this is not for everyone, it is only for those who want to take charge of their life and are
         committed to putting in the required work. If you are in this category, use the link below to get registered. We
         await your entry into the millionaires club.</h2>
@@ -80,7 +80,7 @@
   </section>
 
   <section>
-    <div data-aos="fade-up" class=" container section-3">
+    <div data-aos="fade-up" class="  section-3">
       <h3 class="h3-cont1"><b>A successful internet marketer decided to share his story with you after losing all of his life savings to
           a failed business in 2019</b></h3>
       <h3 class="h3-cont">How he has been dominating the Nigerian internet marketing space, generating 100 million naira
